<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvBoardTerminalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/terminal_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvBoardTerminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/tvBoardTerminalLabel"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/tvBoardGate" />

        <TextView
            android:id="@+id/tvBoardGateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gate_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvBoardGate"
            app:layout_constraintEnd_toEndOf="@+id/tvBoardGate"
            app:layout_constraintStart_toStartOf="@+id/tvBoardGate"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvBoardGate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="58B"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/tvBoardSeat"
            app:layout_constraintStart_toEndOf="@+id/tvBoardTerminal"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvBoardSeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/seat_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvBoardGateLabel"
            app:layout_constraintEnd_toEndOf="@+id/tvBoardSeat"
            app:layout_constraintStart_toStartOf="@+id/tvBoardSeat"
            app:layout_constraintTop_toTopOf="@+id/tvBoardGateLabel" />

        <TextView
            android:id="@+id/tvBoardSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:text="24A"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

    </android.support.constraint.ConstraintLayout>
</layout>