<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/tvPassengerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/passenger_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPassengerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="MR. JAMES BOND"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@+id/tvPassengerLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvPassengerLabel" />

            <ImageView
                android:id="@+id/imgLeftRectangle"
                android:layout_width="64dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassengerName"
                app:srcCompat="@drawable/shape_rectangle_stroke" />

            <ImageView
                android:id="@+id/imgRightRectangle"
                android:layout_width="64dp"
                android:layout_height="80dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassengerName"
                app:srcCompat="@drawable/shape_rectangle_stroke" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/art_airplane"
                app:layout_constraintBottom_toTopOf="@+id/tvFlightCode"
                app:layout_constraintEnd_toEndOf="@+id/imgDivider"
                app:layout_constraintStart_toStartOf="@+id/imgDivider" />

            <ImageView
                android:id="@+id/imgDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imgRightRectangle"
                app:layout_constraintEnd_toStartOf="@+id/imgRightRectangle"
                app:layout_constraintStart_toEndOf="@+id/imgLeftRectangle"
                app:layout_constraintTop_toTopOf="@+id/imgLeftRectangle" />

            <TextView
                android:id="@+id/tvFlightCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="UDA 2456"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/imgDivider"
                app:layout_constraintStart_toStartOf="@+id/imgDivider"
                app:layout_constraintTop_toTopOf="@+id/imgDivider" />

            <TextView
                android:id="@+id/tvDepartureAirport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DVO"
                app:layout_constraintBottom_toBottomOf="@+id/imgLeftRectangle"
                app:layout_constraintEnd_toStartOf="@+id/imgDivider"
                app:layout_constraintStart_toStartOf="@+id/imgLeftRectangle"
                app:layout_constraintTop_toTopOf="@+id/imgLeftRectangle" />

            <TextView
                android:id="@+id/tvArrivalAirport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POA"
                app:layout_constraintBottom_toBottomOf="@+id/imgRightRectangle"
                app:layout_constraintEnd_toEndOf="@+id/imgRightRectangle"
                app:layout_constraintStart_toEndOf="@+id/imgDivider"
                app:layout_constraintTop_toTopOf="@+id/imgRightRectangle" />

            <TextView
                android:id="@+id/tvBoardingTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/boarding_time_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLeftRectangle" />

            <TextView
                android:id="@+id/tvBoardingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:10 PM"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@+id/tvBoardingTimeLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvBoardingTimeLabel" />

            <TextView
                android:id="@+id/tvBoardingInLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/boarding_in_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRightRectangle" />

            <TextView
                android:id="@+id/tvBoardingInTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:15"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="@+id/tvBoardingInLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvBoardingInLabel" />

            <TextView
                android:id="@+id/tvDepartureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/departure_time_label"
                app:layout_constraintStart_toStartOf="@+id/tvBoardingTime"
                app:layout_constraintTop_toBottomOf="@+id/tvBoardingTime" />

            <TextView
                android:id="@+id/tvDepartureTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:30 PM"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="@+id/tvDepartureLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartureLabel" />

            <TextView
                android:id="@+id/tvArrivalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/arrival_time_label"
                app:layout_constraintEnd_toEndOf="@+id/tvBoardingInTime"
                app:layout_constraintTop_toBottomOf="@+id/tvBoardingInTime" />

            <TextView
                android:id="@+id/tvArrivalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:30 PM"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="@+id/tvArrivalLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvArrivalLabel" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/tvArrivalTime"
                app:layout_constraintStart_toStartOf="@+id/tvDepartureTime"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartureTime" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvBoardTerminalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal_label"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvBoardTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/tvBoardTerminalLabel"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/tvBoardTerminalLabel" />

            <TextView
                android:id="@+id/tvBoardGateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gate_label"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/tvBoardGate"
                app:layout_constraintEnd_toEndOf="@+id/tvBoardGate"
                app:layout_constraintStart_toStartOf="@+id/tvBoardGate"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvBoardGate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="58B"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/tvBoardSeat"
                app:layout_constraintStart_toEndOf="@+id/tvBoardTerminal"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tvBoardSeatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_label"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tvBoardGateLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvBoardSeat"
                app:layout_constraintStart_toStartOf="@+id/tvBoardSeat"
                app:layout_constraintTop_toTopOf="@+id/tvBoardGateLabel" />

            <TextView
                android:id="@+id/tvBoardSeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24A"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/art_barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>